# image-matting

./: .gitignore  AlphaCalculator.cpp  AlphaCalculator.hpp  CMakeLists.txt  Image.cpp  Image.hpp  ImagePrinter.cpp  ImagePrinter.hpp  ImageReader.cpp  ImageReader.hpp  LaplacianCalculator.cpp  LaplacianCalculator.hpp  Makefile  MattingPerformer.cpp  MattingPerformer.hpp  README.md  SparseMatrixEquationSolver.cpp  equationSolver.cpp  main.cpp  matting.cpp  readme.md
code/: AlphaCalculator.hpp  Image.hpp  SparseMatrixEquationSolver.hpp  main.cpp
code/Eigen/: Image.hpp
code/include/: ImageReader.hpp
code/lib/: libamd.2.4.6.dylib  libamd.dylib  libbtf.1.2.6.dylib  libbtf.1.dylib  libcamd.2.4.6.dylib  libcamd.dylib  libccolamd.2.9.6.dylib  libccolamd.2.dylib  libcholmod.3.0.11.dylib  libcholmod.3.dylib  libcolamd.2.9.6.dylib  libcolamd.2.dylib  libcxsparse.3.1.9.dylib  libcxsparse.3.dylib  libklu.1.3.8.dylib  libklu.1.dylib  libldl.2.2.6.dylib  libldl.dylib  libmetis.dylib  librbio.2.2.6.dylib  librbio.dylib  libspqr.2.0.8.dylib  libspqr.2.dylib  libsuitesparseconfig.4.5.5.dylib  libsuitesparseconfig.dylib  libumfpack.5.7.6.dylib  libumfpack.dylib
code/make/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageMatting
code/src/: AlphaCalculator.cpp  Image.cpp  ImagePrinter.cpp  ImageReader.cpp  LaplacianCalculator.cpp  main.cpp
data/: alpha.txt
report/: OOP-Graph.tex  project.bib  project.tex
